# python-project-template

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: renovate.json
.github/workflows/: ci.yaml
script/: scripts.py
tests/: test_python_project.py
