[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["pyto86 <pyto86.me@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
flake8 = "^4.0.0"
isort = "^5.6.4"
black = "^20.8b1"
mypy = "^0.790"
coverage = "^5.3"
flake8-import-order = "^0.18.1"
coveralls = "^2.2.0"

[tool.poetry.scripts]
test  = "script.scripts:test"
cov  = "script.scripts:cov"
lint = "script.scripts:lint"
format = "script.scripts:format"
typecheck = "script.scripts:typecheck"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
